tests/agl/rejections/type/ctor_missing_field.agl
record P
  n: int
  t: text
let p = P(n: 1)
